--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -124,7 +124,7 @@
   
   <header class="border-bottom mb-4 pb-3">
       <div class="form-inline">
-        <span class="mr-md-auto">32 Items found </span>
+        <span class="mr-md-auto"><b>{{ product_counts }}</b> Items found </span>
         
       </div>
   </header><!-- sect-heading -->
