--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -8,27 +8,33 @@
   <div class="container">
   
   <!-- ============================ COMPONENT 1 ================================= -->
-  
-  <div class="row">
-    <aside class="col-lg-9">
-  <div class="card">
-  <table class="table table-borderless table-shopping-cart">
-  <thead class="text-muted">
-  <tr class="small text-uppercase">
-    <th scope="col">Product</th>
-    <th scope="col" width="120">Quantity</th>
-    <th scope="col" width="120">Price</th>
-    <th scope="col" class="text-right" width="200"> </th>
-  </tr>
-  </thead>
-  <tbody>
+{% if not cart_items %}
+    <h2 class="text-center">Your Shopping cart is Empty</h2>
+    <div class="text-center">
+      <a href="{% url 'store' %}" class="btn btn-primary">Continue Shopping</a>
+    </div>
+{% else %}
+    <div class="row">
+      <aside class="col-lg-9">
+    <div class="card">
+    <table class="table table-borderless table-shopping-cart">
+    <thead class="text-muted">
+    <tr class="small text-uppercase">
+      <th scope="col">Product</th>
+      <th scope="col" width="120">Quantity</th>
+      <th scope="col" width="120">Price</th>
+      <th scope="col" class="text-right" width="200"> </th>
+    </tr>
+    </thead>
+
+<tbody>
     {% for cart_item in cart_items %}
       <tr>
         <td>
           <figure class="itemside align-items-center">
             <div class="aside"><img src="{{ cart_item.product.images.url }}" class="img-sm"></div>
             <figcaption class="info">
-              <a href="#" class="title text-dark">{{ cart_item.product.product_name }}</a>
+              <a href="{{ cart_item.product.get_url }}" class="title text-dark">{{ cart_item.product.product_name }}</a>
               <p class="text-muted small">Color: 25 Mpx <br> Size: Canon</p>
             </figcaption>
           </figure>
@@ -90,7 +96,7 @@
           <img src="./images/misc/payments.png" height="26">
         </p>
         <a href="./place-order.html" class="btn btn-primary btn-block"> Checkout </a>
-        <a href="./store.html" class="btn btn-light btn-block">Continue Shopping</a>
+        <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
       </div> <!-- card-body.// -->
       </div> <!-- card.// -->
   
@@ -99,7 +105,8 @@
   
   </div> <!-- row.// -->
   <!-- ============================ COMPONENT 1 END .// ================================= -->
-  
+{% endif %}
+
   </div> <!-- container .//  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
