Add Variation in CartItem

--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -60,12 +60,7 @@
       {% if single_product.stock <= 0 %}
           <h1>This Product out of stock..</h1>
       {% else %}    
-        {% if in_cart %}
-        <a href="#" class="btn  btn-success"> <span class="text">Added to cart</span> <i class="fas fa-check"></i></a>
-        <a href="{% url 'cart' %}" class="btn  btn-outline-primary"> <span class="text">View Cart</span> <i class="fas fa-eye"></i></a>
-        {% else %}
-          <button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
-        {% endif %}
+        <button type="submit" class="btn  btn-primary"><span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
       {% endif %}
     </article> <!-- product-info-aside .// -->
   </form>
@@ -88,8 +83,8 @@
       <div class="icontext w-100">
         <img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
         <div class="text">
-          <span class="date text-muted float-md-right">24.04.2020 </span>  
-          <h6 class="mb-1">Mike John </h6>
+          <span class="date text-muted float-md-right">2022 </span>  
+          <h6 class="mb-1">AbdElMegeed Ahmed</h6>
           
         </div>
       </div> <!-- icontext.// -->
