--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -53,12 +53,18 @@
                   <div class="input-group input-spinner">
                     <div class="input-group-prepend">
                       <!--Important  add_ The products Using The - minus icon -->
-                      <a  href="{% url 'remove_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
+                      <a  href="{% url 'remove_cart' cart_item.product.id cart_item.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
                     </div>
                     <input type="text" class="form-control"  value="{{ cart_item.quantity }}">
                     <div class="input-group-append">
                       <!--Important  add_ The products Using The + plus icon -->
-                      <a href="{% url 'add_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
+                      <form action="{% url 'add_cart' cart_item.product.id %}" method="POST">
+                        {% csrf_token %}
+                        {% for item in cart_item.variation.all %}
+                          <input type="hidden" name="{{ item.variation_category | lower }}" value="{{ item.variation_value | capfirst }}">
+                        {% endfor %}
+                        <button class="btn btn-light" type="submit" id="button-minus"> <i class="fa fa-plus"></i> </button>
+                      </form>  
                     </div>
                   </div> <!-- input-group.// -->
                 </div> <!-- col.// -->
@@ -72,7 +78,7 @@
           </div> <!-- price-wrap .// -->
         </td>
         <td class="text-right"> 
-        <a href="{% url 'remove_cart_item' cart_item.product.id %}" class="btn btn-danger"> Remove</a>
+        <a href="{% url 'remove_cart_item' cart_item.product.id cart_item.id %}" onclick="return confirm('Are YOu sure you want to delete the product?!')" class="btn btn-danger"> Remove</a>
         </td>
       </tr>
     {% endfor %}
