--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,6 +7,15 @@
 <section class="section-conten padding-y" style="min-height:84vh">
 
   <!-- ============================ COMPONENT LOGIN   ================================= -->
+<!-- {% if request.GET.command == 'verification' %}
+  <div class="card mx-auto alert alert-info text-center" role="alert" style="max-width: 380px; margin-top:100px;">
+      <h3>We have send you a Email to  {{ request.GET.email }}</h3>
+      <br><br>
+      Already Verified <a href="{% url 'login' %}">LogIn</a>
+  </div>
+
+{% else %}   -->
+
     <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
         <div class="card-body">
         <h4 class="card-title mb-4">Sign in</h4>
@@ -28,8 +37,10 @@
             </div> <!-- form-group// -->    
         </form>
         </div> <!-- card-body.// -->
-      </div> <!-- card .// -->
-  
+  </div> <!-- card .// -->
+
+<!-- {% endif %} -->
+
        <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Register</a></p>
        <br><br>
   <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
