--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,14 +7,14 @@
 <section class="section-conten padding-y" style="min-height:84vh">
 
   <!-- ============================ COMPONENT LOGIN   ================================= -->
-<!-- {% if request.GET.command == 'verification' %}
+{% if request.GET.command == 'verification' %}
   <div class="card mx-auto alert alert-info text-center" role="alert" style="max-width: 380px; margin-top:100px;">
       <h3>We have send you a Email to  {{ request.GET.email }}</h3>
       <br><br>
       Already Verified <a href="{% url 'login' %}">LogIn</a>
   </div>
 
-{% else %}   -->
+{% else %}  
 
     <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
         <div class="card-body">
@@ -39,7 +39,7 @@
         </div> <!-- card-body.// -->
   </div> <!-- card .// -->
 
-<!-- {% endif %} -->
+{% endif %}
 
        <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Register</a></p>
        <br><br>
