--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -78,7 +78,7 @@
               <div class="widget-header">
                 <small class="title text-muted">Welcome {{ user.first_name }}!</small>
                 <div> 
-                  <a href="">DashBoard</a> <span class="dark-transp"> | </span>
+                  <a href="{% url 'dashboard' %}">DashBoard</a> <span class="dark-transp"> | </span>
                   <a href="{% url 'logout' %}">LogOut</a>
                 </div>
               </div>
